Add users count to index, lines count to crags index and ranking controller and index view

--- a/app/views/crags/show.html.haml
+++ b/app/views/crags/show.html.haml
@@ -1,1 +1,3 @@
-= render 'lines/lines_table', lines: @lines
+.container
+  %h1= "#{params[:crag]} (#{@lines.size})"
+  = render 'lines/lines_table', lines: @lines
