--- a/app/views/application/_top_navbar.html.erb
+++ b/app/views/application/_top_navbar.html.erb
@@ -1,22 +1,42 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <%= link_to 'Ranking', root_path, class: 'navbar-brand' %>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Users", users_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Ascents", ascents_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Lines", lines_path, class: "nav-link" %>
-      </li>
-    </ul>
-  </div>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <%= link_to "Users", users_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Lines", lines_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Ascents", ascents_path, class: "nav-link" %>
+            </li>
+        </ul>
+    </div>
+    <div class="mx-auto order-0">
+        <!-- <a class="navbar-brand mx-auto" href="#">Navbar 2</a> -->
+        <%= link_to 'Ranking PZA', root_path, class: 'navbar-brand mx-auto' %>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
+    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+        <ul class="navbar-nav ml-auto">
+          <% if user_signed_in? %>
+            Logged in as <strong><%= current_user.full_name %></strong>.
+            <li class="nav-item">
+              <%= link_to 'Edit profile', edit_user_registration_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Logout', destroy_user_session_path, class: 'nav-link', method: :delete %>
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to 'Sign up', new_user_registration_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Login', new_user_session_path, class: 'nav-link' %>
+            </li>
+          <% end %>
+        </ul>
+    </div>
 </nav>
