--- a/app/views/application/_top_navbar.html.erb
+++ b/app/views/application/_top_navbar.html.erb
@@ -10,6 +10,9 @@
             <li class="nav-item">
               <%= link_to "Ascents", ascents_path, class: "nav-link" %>
             </li>
+            <li class="nav-item">
+              <%= link_to "Find a partner", search_path, class: "nav-link" %>
+            </li>
         </ul>
     </div>
     <div class="mx-auto order-0">
