--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,21 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.0/themes/smoothness/jquery-ui.css" />
+
+    <%= javascript_tag do %>
+      $(document).ready(function () {
+        var places_autocomplete = function(id) {
+          var input = $(id);
+          if(input != null) {
+            input.autocomplete({
+              source: '<%= api_places_autocomplete_path %>'
+            });
+          }
+        }
+        places_autocomplete("#search_city_zip");
+      });
+    <% end %>
   </head>
 
   <body>
